+nginx, +gunicorn servers

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,16 +12,31 @@ services:
     volumes:
       - ./database_dump.sql:/docker-entrypoint-initdb.d/database_dump.sql
       - pg_data:/var/lib/postgresql/data
+    restart: always
 
   web:
     build: .
-    command: ["bash", "-c", "while !</dev/tcp/db/5432; do sleep 1; done; cd drfhalyksite; python3 manage.py migrate; python3 manage.py runserver 0.0.0.0:8000"]
+    command: ["bash", "-c", "while !</dev/tcp/db/5432; do sleep 1; done; cd drfhalyksite; python3 manage.py migrate; \
+              gunicorn -c gunicorn_config.py drfhalyksite.wsgi:application 0.0.0.0:8000"]
     volumes:
       - .:/app
     ports:
       - "8000:8000"
     depends_on:
       - db
+    restart: always
+    environment:
+      - DB_HOST=db
+  nginx:
+    image: nginx:1.18
+    ports:
+      - "1080:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./drfhalyksite/static:/app/static
+    depends_on:
+      - web
+    restart: always
 
 volumes:
   pg_data:
