--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,38 @@ services:
       - pg_data:/var/lib/postgresql/data
     restart: always
 
+  redis:
+    image: redis
+    hostname: redis
+
+  worker:
+    build:
+      context: .
+    hostname: worker
+    entrypoint: celery
+    command: -A celery_app.app worker --loglevel=info
+    volumes:
+      - .:/app
+    links:
+      - redis
+    depends_on:
+      - redis
+
+  flower:
+    build:
+      context: .
+    hostname: flower
+    entrypoint: celery
+    command: -A celery_app.app flower
+    volumes:
+      - .:/app
+    links:
+      - redis
+    depends_on:
+      - redis
+    ports:
+    -  "5555:5555"
+
   web:
     build: .
     command: ["bash", "-c", "while !</dev/tcp/db/5432; do sleep 1; done; cd drfhalyksite; python3 manage.py migrate; \
@@ -27,6 +59,7 @@ services:
     restart: always
     environment:
       - DB_HOST=db
+
   nginx:
     image: nginx:1.18
     ports:
