--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ psycopg2-binary==2.9.9
 django-cors-headers==4.3.1
 pillow==10.1.0
 gunicorn==21.2.0
+uvicorn==0.24.0.post1
+celery==5.3.6
+redis==5.0.1
+flower==2.0.1
